fixed spacing

--- a/assets/css/about_us.css
+++ b/assets/css/about_us.css
@@ -216,7 +216,10 @@
   .about-team-content{
     width: 100%;
     max-width: 1350px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -8rem;
+    margin-bottom: -8rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, auto));
     align-items: center;
@@ -276,6 +279,7 @@
   }
   
   .about-continer{
+    padding-top: -100rem;
     padding-bottom: 10rem;
   }
   
